--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "noEmit": true,
 
     /* Linting */
@@ -25,6 +25,5 @@
     "paths": {
       "~/*": ["./src/*"]
     }
-  
   }
 }
