--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/inter": "^5.1.1",
     "@kobalte/core": "^0.13.9",
     "@sentry/solid": "^9.1.0",
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.8",
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.109.2",
     "@tanstack/solid-form": "^0.43.2",
@@ -23,13 +23,15 @@
     "@tanstack/store": "^0.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.4",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.8",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5.7.2",
+    "unocss": "^66.0.0",
     "vite": "^6.0.11",
     "vite-plugin-solid": "^2.11.2"
   }
